2005-09-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/plugins/gst-plugins-base-plugins-docs.sgml:
	* docs/plugins/gst-plugins-base-plugins-sections.txt:
	* ext/theora/theoraenc.c:
	  add theoraenc

2005-09-13  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/audioconvert/Makefile.am:
	  Audioconvert derives from GstBaseTransform and should
	  link to the library with our base elements to avoid
	  unresolved symbols. Makes things work with MinGW (#316160)

	* gst/playback/test4.c: (main):
	  Fix MinGW build problem and use g_usleep() instead of 
	  sleep() (#316162)

2005-09-12  Wim Taymans  <wim@fluendo.com>

	* gst/audioconvert/audioconvert.c: (float),
	(audio_convert_prepare_context), (audio_convert_convert):
	* gst/audioconvert/audioconvert.h:
	Cleanups, speedups, simplifications, added back support
	for 24 bits.

2005-09-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/plugins/gst-plugins-base-plugins-docs.sgml:
	* docs/plugins/gst-plugins-base-plugins-sections.txt:
	* docs/plugins/inspect/plugin-ffmpegcolorspace.xml:
	* docs/plugins/tmpl/element-tcpserversink.sgml:
	* gst/ffmpegcolorspace/gstffmpeg.c:
	* gst/ffmpegcolorspace/gstffmpegcolorspace.c:
	* gst/videotestsrc/gstvideotestsrc.c:
	* gst/volume/gstvolume.c:
	  add more elements to the docs

2005-09-09  Jan Schmidt  <thaytan@mad.scientist.com>

	* check/Makefile.am:
	* check/pipelines/simple_launch_lines.c: (setup_pipeline),
	(run_pipeline), (GST_START_TEST), (simple_launch_lines_suite):
	  Add extra tests for basetransform based components. 
	  Comment out the test_element_negotiation test until we decide
	  if it's testing correct behaviour.
	* ext/libvisual/visual.c: (gst_visual_init), (get_buffer),
	(gst_visual_chain), (gst_visual_change_state):
	  Slightly more correct but still bogus timestamping.
	  Fix state change function.
	* gst/audioconvert/gstaudioconvert.c:
	(gst_audio_convert_class_init):
	* gst/audioresample/gstaudioresample.c: