@@ -32,6 +32,7 @@
     <xi:include href="xml/plugin-audiorate.xml" />
     <xi:include href="xml/plugin-decodebin.xml" />
     <xi:include href="xml/plugin-gnomevfs.xml" />
+    <xi:include href="xml/plugin-libvisual.xml" />
     <xi:include href="xml/plugin-ogg.xml" />
     <xi:include href="xml/plugin-playbin.xml" />
     <xi:include href="xml/plugin-sine.xml" />
